Bug 126449 - Tables in DOC document are overlapping (one floating multipage table-in-table-in-table)
Summary: Tables in DOC document are overlapping (one floating multipage table-in-table...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: filter:doc
: 132598 (view as bug list)
Depends on:
Blocks: RTF-Floatingtable DOC-Floatingtable
  Show dependency treegraph
 
Reported: 2019-07-17 20:20 UTC by Devon Powell
Modified: 2025-10-09 10:36 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Overlapping tables (56.50 KB, application/msword)
2019-07-17 20:21 UTC, Devon Powell
Details
DOCX version of the bugdoc, converted using Word. (21.85 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-10-04 06:31 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Devon Powell 2019-07-17 20:20:23 UTC
Description:
Multiple tables in Word documents are overlapping

Steps to Reproduce:
1.Open attached test document in LibreOffice Writer
2.Observe tables spreading in multiple pages are overlapping


Actual Results:
Tables are overlapping

Expected Results:
Tables should not overlap


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Devon Powell 2019-07-17 20:21:54 UTC
Created attachment 152838 [details]
Overlapping tables
Comment 2 Roman Kuznetsov 2019-07-19 13:55:26 UTC
confirm in

Version: 6.4.0.0.alpha0+ (x86)
Build ID: c738be4de6886a0c96b7d10df7e78c8b2964c135
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded
Comment 3 Justin L 2020-04-23 13:15:03 UTC
Surely a duplicate of something. At least there is an unfloat table popup that seems to let the user fix it.
Comment 4 QA Administrators 2022-04-24 03:30:10 UTC Comment hidden (noise)
Comment 5 Justin L 2023-06-09 13:50:38 UTC
repro 24.2 (very early in development)
Comment 6 Justin L 2023-07-11 20:39:30 UTC
*** Bug 132598 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2023-09-27 07:34:33 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c86d6111525f09e895483c7c4919a4b9a5dbd9b9

Related: tdf#126449 sw floattable: fix bad join of inline tbl with inner fly

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-09-29 07:59:27 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/83abd141bf41c1c8a1d4e5a894b235c842da2a07

Related: tdf#126449 sw floattable: fix bad position of in-table follow fly

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-09-29 08:40:33 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/99c627a511cfe86a2d6b0bc945bd9f957cb4866b

Related: tdf#126449 sw floattable: fix bad join of inline tbl with inner fly

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-10-03 15:29:34 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/695390b08799af34b393c81c834d615bea330d89

tdf#126449 sw floattable: fix too small height of non-last anchors

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Miklos Vajna 2023-10-04 06:31:52 UTC
Created attachment 189993 [details]
DOCX version of the bugdoc, converted using Word.

The DOCX version now looks ~perfect, I would say.

There is still a pending change in gerrit to fix the overlaps when importing from DOC.
Comment 12 Commit Notification 2023-10-04 09:04:16 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/328c8083f2e3980252381adbec7f979982c1f8a7

Related: tdf#126449 sw floattable: fix bad position of in-table follow fly

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2023-10-04 09:55:23 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/89a75cd194371002247d0138e759835bc673f7b0

tdf#126449 sw floattable: DOC import: handle inner floating table

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Miklos Vajna 2023-10-04 09:56:20 UTC
The overlap problems are now also fixed for DOC.
Comment 15 Commit Notification 2023-10-05 09:26:57 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/c4599c3b71bf4201b359b7bc574db1460c9e5864

tdf#126449 sw floattable: fix too small height of non-last anchors

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.