Related: tdf#126449 sw floattable: fix bad join of inline tbl with inner fly

The problem is that the bugdoc has 3 pages with an inline outer table,
where pages 2 & 3 have an inner floating table. The outer table is only
on pages 1 -> 2, while it should be on pages 1 -> 2 -> 3.

The trouble is similar to point 4) of commit
cfe9c68a7a19dd77d1fcbde3a7dd75730634becc (tdf#157119 sw floattable: fix
moving master of split fly to next page, 2023-09-21), i.e. our normal
behavior would move up the follow table to page 2 from page 3 and simply
shift up the floating table, which is fine for images, but not for
floating tables.

Fix the problem by checking for flys on the old page when determining if
it's OK to move or not. Checking for flys on the new page is already
done in SwTabFrame::ShouldBwdMoved(), when it calls the precede's
CalcFlyOffsets().

This just fixes a simplified DOCX bugdoc (inline outer table, floating
inner table), the full document still needs more fixes.

(cherry picked from commit c86d6111525f09e895483c7c4919a4b9a5dbd9b9)

Change-Id: I7946c0f3cb9995a497fdfff3bfac28b6f16ff844
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157373
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>